--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- 2016-11-01 Tue 20:22 -->
+<!-- 2016-11-03 Thu 17:40 -->
 <meta  charset="utf-8">
 <meta  name="viewport" content="width=device-width, initial-scale=1">
 <title>Empreendimento turístico</title>
@@ -171,29 +171,29 @@ for the JavaScript code in this tag.
 <li><a href="#orgheadline13">2.4. Contratação</a></li>
 </ul>
 </li>
-<li><a href="#orgheadline21">3. <span class="todo IN_PROGRESS">IN-PROGRESS</span> Definição do Ambito</a>
+<li><a href="#orgheadline31">3. <span class="todo IN_PROGRESS">IN-PROGRESS</span> Definição do Ambito</a>
 <ul>
 <li><a href="#orgheadline15">3.1. Caraterísticas e Objetivos</a></li>
 <li><a href="#orgheadline16">3.2. Público Alvo</a></li>
-<li><a href="#orgheadline17">3.3. Modelo de Funcionamento</a></li>
-<li><a href="#orgheadline19">3.4. Método de Construção</a></li>
-<li><a href="#orgheadline20">3.5. Análise SWOT</a></li>
+<li><a href="#orgheadline27">3.3. Modelo de Funcionamento</a></li>
+<li><a href="#orgheadline29">3.4. Método de Construção</a></li>
+<li><a href="#orgheadline30">3.5. Análise SWOT</a></li>
 </ul>
 </li>
-<li><a href="#orgheadline22">4. <span class="todo TODO">TODO</span> Enquadramento Legal</a></li>
-<li><a href="#orgheadline23">5. <span class="todo TODO">TODO</span> Quantificação de Custos</a></li>
+<li><a href="#orgheadline32">4. <span class="todo TODO">TODO</span> Enquadramento Legal</a></li>
+<li><a href="#orgheadline33">5. <span class="todo TODO">TODO</span> Quantificação de Custos</a></li>
 <li><a href="#orgheadline6">6. <span class="todo TODO">TODO</span> Calendarização</a></li>
-<li><a href="#orgheadline28">7. <span class="todo TODO">TODO</span> Estudos de Viabilidade</a>
+<li><a href="#orgheadline38">7. <span class="todo TODO">TODO</span> Estudos de Viabilidade</a>
 <ul>
-<li><a href="#orgheadline24">7.1. Viabilidade Técnica</a></li>
-<li><a href="#orgheadline25">7.2. Viabilidade Ambiental</a></li>
-<li><a href="#orgheadline26">7.3. Viabilidade Politíca-Social</a></li>
-<li><a href="#orgheadline27">7.4. Viabilidade Económica e Financeira</a></li>
+<li><a href="#orgheadline34">7.1. Viabilidade Técnica</a></li>
+<li><a href="#orgheadline35">7.2. Viabilidade Ambiental</a></li>
+<li><a href="#orgheadline36">7.3. Viabilidade Politíca-Social</a></li>
+<li><a href="#orgheadline37">7.4. Viabilidade Económica e Financeira</a></li>
 </ul>
 </li>
 <li><a href="#orgheadline8">8. <span class="todo TODO">TODO</span> Avaliação Financeira</a></li>
-<li><a href="#orgheadline29">9. <span class="todo TODO">TODO</span> Organograma de Gestão do Empreendimento</a></li>
-<li><a href="#orgheadline30">10. <span class="todo TODO">TODO</span> Conclusão</a></li>
+<li><a href="#orgheadline39">9. <span class="todo TODO">TODO</span> Organograma de Gestão do Empreendimento</a></li>
+<li><a href="#orgheadline40">10. <span class="todo TODO">TODO</span> Conclusão</a></li>
 </ul>
 </div>
 </div>
@@ -720,8 +720,8 @@ serviços.
 
 
 
-<div id="outline-container-orgheadline21" class="outline-2">
-<h2 id="orgheadline21"><span class="section-number-2">3</span> <span class="todo IN_PROGRESS">IN-PROGRESS</span> Definição do Ambito</h2>
+<div id="outline-container-orgheadline31" class="outline-2">
+<h2 id="orgheadline31"><span class="section-number-2">3</span> <span class="todo IN_PROGRESS">IN-PROGRESS</span> Definição do Ambito</h2>
 <div class="outline-text-2" id="text-3">
 
 <div id="orgparagraph3" class="figure">
@@ -844,52 +844,173 @@ questão de moda.
 </div>
 </div>
 
-<div id="outline-container-orgheadline17" class="outline-3">
-<h3 id="orgheadline17"><span class="section-number-3">3.3</span> Modelo de Funcionamento</h3>
+<div id="outline-container-orgheadline27" class="outline-3">
+<h3 id="orgheadline27"><span class="section-number-3">3.3</span> Modelo de Funcionamento</h3>
+<div class="outline-text-3" id="text-3-3">
+<p>
+O complexo encontra-se dividido em 11 lotes, em que um dos lotes, que
+apresenta uma área ligeiramente superior aos outros, vai ser usado
+para a construção do edificio central que albergará o escritório,
+recepção, oficina de manutenção e bar. Também neste lote será criada
+uma área exterior comum para os residentes e visitantes do complexo,
+com parque de merendas e piscina biológica.             
+Os restantes lotes serão usados para a construção de casas.   
+</p>
 </div>
 
-<div id="outline-container-orgheadline19" class="outline-3">
-<h3 id="orgheadline19"><span class="section-number-3">3.4</span> Método de Construção</h3>
+
+<div id="outline-container-orgheadline17" class="outline-4">
+<h4 id="orgheadline17">Edificio Central</h4>
+<div class="outline-text-4" id="text-orgheadline17">
+<p>
+Situado no maior dos 11 lotes, estratégicamente localizada no centro do
+complexo, o Edificio Central é o núcleo de toda a
+atividade. Dele fazem parte:
+</p>
+</div>
+
+<div id="outline-container-orgheadline18" class="outline-5">
+<h5 id="orgheadline18">Escritório</h5>
+<div class="outline-text-5" id="text-orgheadline18">
+<p>
+Centro administrativo do complexo, será usado pelo Gestor de Projeto
+ <sup><a id="fnr.5" class="footref" href="#fn.5">5</a></sup> 
+em fase de Exploração. Em ele serão arquivados os documentos legais e
+ não legais, necessários ao dia-a-dia do complexo. O escritório também
+ servirá de espaço para reuniões administrativas.
+</p>
+</div>
+</div>
+
+<div id="outline-container-orgheadline19" class="outline-5">
+<h5 id="orgheadline19">Recepção</h5>
+</div>
+
+<div id="outline-container-orgheadline20" class="outline-5">
+<h5 id="orgheadline20">Bar</h5>
+</div>
+
+<div id="outline-container-orgheadline21" class="outline-5">
+<h5 id="orgheadline21">Piscina Biológica</h5>
+<div class="outline-text-5" id="text-orgheadline21">
+
+<div id="orgparagraph4" class="figure">
+<p><img src="./images/bio-pool.png" alt="casa" title="Contentor" align="center" width="600">
+</p>
+<p><span class="figure-number">Figure 4:</span> Exemplo de uma piscina biológica, em que o elemento "água", mistura-se com o elemento "terra". fonte de imagem: <a href="https://en.wikipedia.org/wiki/Natural_pool">https://en.wikipedia.org/wiki/Natural_pool</a></p>
+</div>
+
+
+
+<blockquote>
+<p>
+"Os <b>custos</b> variam muito, dependente do tamanho da instalação e dos
+materiais escolhidos. Estruturas em betão são mais caros do que a
+impermeabilização com uma tela plástica especial – afinal o método
+mais comum para a construção de piscinas biológicas.
+</p>
+
+<p>
+Com a base em cerca de 150 projectos realizados de piscinas biológicas
+em Portugal pode-se considerar um preço de orientação por metro
+quadrado construído varia entre <span class="underline">120 e 125 Euro</span> (excluindo apenas o
+valor da água do primeiro enchimento)."
+</p>
+
+<p>
+fonte: <a href="http://www.biopiscinas.pt/faqs1.html">Biopiscinas</a>
+</p>
+</blockquote>
+</div>
+</div>
+
+<div id="outline-container-orgheadline22" class="outline-5">
+<h5 id="orgheadline22">Parque de Merendas</h5>
+</div>
+
+<div id="outline-container-orgheadline23" class="outline-5">
+<h5 id="orgheadline23">Oficina</h5>
+</div>
+
+<div id="outline-container-orgheadline24" class="outline-5">
+<h5 id="orgheadline24">Canil</h5>
+<div class="outline-text-5" id="text-orgheadline24">
+<p>
+É esperado que muito dos nossos clientes sejam donos de animais de
+estimação. Para que eles possam disfrutar de uma estadia descansada e 
+sem preocupações, taremos ao dispor dos nossos clientes um canil, que
+pelo qual, será cobrado uma <span class="underline">taxa extra de 5 euros</span> ao dia. Este valor
+incluí o fornecimento de ração sólida aos animais. Não é permitido
+qualquer outro tipo de ração dentro do canil, de modo a assegurar as
+condições de higiene e saúde dos animais. 
+Na altura em que o animal de estimação é deixado ao nosso cuidado, o
+dono deverá assinar um documento preparado pelo nosso advogado, em que
+nos libera de todas as responsabilidades caso o animal venha a
+contrair alguma doença por estar em contato com outros animais no
+canil.
+</p>
+</div>
+</div>
+</div>
+
+
+
+
+<div id="outline-container-orgheadline25" class="outline-4">
+<h4 id="orgheadline25">Casas</h4>
+</div>
+
+
+<div id="outline-container-orgheadline26" class="outline-4">
+<h4 id="orgheadline26">Área comum e Acessos</h4>
+</div>
+</div>
+
+
+
+
+<div id="outline-container-orgheadline29" class="outline-3">
+<h3 id="orgheadline29"><span class="section-number-3">3.4</span> Método de Construção</h3>
 <div class="outline-text-3" id="text-3-4">
-</div><div id="outline-container-orgheadline18" class="outline-4">
-<h4 id="orgheadline18">Soluções Técnicas</h4>
+</div><div id="outline-container-orgheadline28" class="outline-4">
+<h4 id="orgheadline28">Soluções Técnicas</h4>
 </div>
 </div>
 
-<div id="outline-container-orgheadline20" class="outline-3">
-<h3 id="orgheadline20"><span class="section-number-3">3.5</span> Análise SWOT</h3>
+<div id="outline-container-orgheadline30" class="outline-3">
+<h3 id="orgheadline30"><span class="section-number-3">3.5</span> Análise SWOT</h3>
 </div>
 </div>
 
-<div id="outline-container-orgheadline22" class="outline-2">
-<h2 id="orgheadline22"><span class="section-number-2">4</span> <span class="todo TODO">TODO</span> Enquadramento Legal</h2>
+<div id="outline-container-orgheadline32" class="outline-2">
+<h2 id="orgheadline32"><span class="section-number-2">4</span> <span class="todo TODO">TODO</span> Enquadramento Legal</h2>
 </div>
 
-<div id="outline-container-orgheadline23" class="outline-2">
-<h2 id="orgheadline23"><span class="section-number-2">5</span> <span class="todo TODO">TODO</span> Quantificação de Custos</h2>
+<div id="outline-container-orgheadline33" class="outline-2">
+<h2 id="orgheadline33"><span class="section-number-2">5</span> <span class="todo TODO">TODO</span> Quantificação de Custos</h2>
 </div>
 
 <div id="outline-container-orgheadline6" class="outline-2">
 <h2 id="orgheadline6"><span class="section-number-2">6</span> <span class="todo TODO">TODO</span> Calendarização</h2>
 </div>
 
-<div id="outline-container-orgheadline28" class="outline-2">
-<h2 id="orgheadline28"><span class="section-number-2">7</span> <span class="todo TODO">TODO</span> Estudos de Viabilidade</h2>
+<div id="outline-container-orgheadline38" class="outline-2">
+<h2 id="orgheadline38"><span class="section-number-2">7</span> <span class="todo TODO">TODO</span> Estudos de Viabilidade</h2>
 <div class="outline-text-2" id="text-7">
-</div><div id="outline-container-orgheadline24" class="outline-3">
-<h3 id="orgheadline24"><span class="section-number-3">7.1</span> Viabilidade Técnica</h3>
+</div><div id="outline-container-orgheadline34" class="outline-3">
+<h3 id="orgheadline34"><span class="section-number-3">7.1</span> Viabilidade Técnica</h3>
 </div>
 
-<div id="outline-container-orgheadline25" class="outline-3">
-<h3 id="orgheadline25"><span class="section-number-3">7.2</span> Viabilidade Ambiental</h3>
+<div id="outline-container-orgheadline35" class="outline-3">
+<h3 id="orgheadline35"><span class="section-number-3">7.2</span> Viabilidade Ambiental</h3>
 </div>
 
-<div id="outline-container-orgheadline26" class="outline-3">
-<h3 id="orgheadline26"><span class="section-number-3">7.3</span> Viabilidade Politíca-Social</h3>
+<div id="outline-container-orgheadline36" class="outline-3">
+<h3 id="orgheadline36"><span class="section-number-3">7.3</span> Viabilidade Politíca-Social</h3>
 </div>
 
-<div id="outline-container-orgheadline27" class="outline-3">
-<h3 id="orgheadline27"><span class="section-number-3">7.4</span> Viabilidade Económica e Financeira</h3>
+<div id="outline-container-orgheadline37" class="outline-3">
+<h3 id="orgheadline37"><span class="section-number-3">7.4</span> Viabilidade Económica e Financeira</h3>
 </div>
 </div>
 
@@ -897,12 +1018,12 @@ questão de moda.
 <h2 id="orgheadline8"><span class="section-number-2">8</span> <span class="todo TODO">TODO</span> Avaliação Financeira</h2>
 </div>
 
-<div id="outline-container-orgheadline29" class="outline-2">
-<h2 id="orgheadline29"><span class="section-number-2">9</span> <span class="todo TODO">TODO</span> Organograma de Gestão do Empreendimento</h2>
+<div id="outline-container-orgheadline39" class="outline-2">
+<h2 id="orgheadline39"><span class="section-number-2">9</span> <span class="todo TODO">TODO</span> Organograma de Gestão do Empreendimento</h2>
 </div>
 
-<div id="outline-container-orgheadline30" class="outline-2">
-<h2 id="orgheadline30"><span class="section-number-2">10</span> <span class="todo TODO">TODO</span> Conclusão</h2>
+<div id="outline-container-orgheadline40" class="outline-2">
+<h2 id="orgheadline40"><span class="section-number-2">10</span> <span class="todo TODO">TODO</span> Conclusão</h2>
 </div>
 <div id="footnotes">
 <h2 class="footnotes">Footnotes: </h2>
@@ -927,12 +1048,15 @@ tanto durante a construção como durante a fase de exploração, devido
 às dimensões e tipo de veículos usados pelas empresas que fazem a
 entrega de bens.</div></div>
 
+<div class="footdef"><sup><a id="fn.5" class="footnum" href="#fnr.5">5</a></sup> <div class="footpara">Em fase de Exploração, o Gestor de Projeto toma o cargo de
+Administrador Geral para com o Empreendimento</div></div>
+
 
 </div>
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: Luis Moura, Diana Rodrigues</p>
-<p class="date">Created: 2016-11-01 Tue 20:22</p>
+<p class="date">Created: 2016-11-03 Thu 17:40</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
