--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- 2016-11-07 Mon 20:15 -->
+<!-- 2016-11-07 Mon 21:07 -->
 <meta  charset="utf-8">
 <meta  name="viewport" content="width=device-width, initial-scale=1">
 <title>Empreendimento turístico</title>
@@ -191,7 +191,7 @@ for the JavaScript code in this tag.
 <li><a href="#orgheadline14">2.5. Funcionários</a></li>
 </ul>
 </li>
-<li><a href="#orgheadline33">3. <span class="todo IN_PROGRESS">IN-PROGRESS</span> Definição do Ambito</a>
+<li><a href="#orgheadline34">3. <span class="todo IN_PROGRESS">IN-PROGRESS</span> Definição do Ambito</a>
 <ul>
 <li><a href="#orgheadline16">3.1. Caraterísticas e Objetivos</a></li>
 <li><a href="#orgheadline17">3.2. Público Alvo</a></li>
@@ -212,32 +212,33 @@ for the JavaScript code in this tag.
 <li><a href="#orgheadline27">3.3.3. Área comum e Acessos</a></li>
 </ul>
 </li>
-<li><a href="#orgheadline31">3.4. Método de Construção</a>
+<li><a href="#orgheadline32">3.4. Método de Construção</a>
 <ul>
-<li><a href="#orgheadline30">3.4.1. Soluções Técnicas</a>
+<li><a href="#orgheadline31">3.4.1. Soluções Técnicas</a>
 <ul>
 <li><a href="#orgheadline29">3.4.1.1. Painéis Solares Fotovoltaicos</a></li>
+<li><a href="#orgheadline30">3.4.1.2. Casa</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#orgheadline32">3.5. Análise SWOT</a></li>
+<li><a href="#orgheadline33">3.5. Análise SWOT</a></li>
 </ul>
 </li>
-<li><a href="#orgheadline34">4. <span class="todo TODO">TODO</span> Enquadramento Legal</a></li>
-<li><a href="#orgheadline35">5. <span class="todo TODO">TODO</span> Quantificação de Custos</a></li>
+<li><a href="#orgheadline35">4. <span class="todo TODO">TODO</span> Enquadramento Legal</a></li>
+<li><a href="#orgheadline36">5. <span class="todo TODO">TODO</span> Quantificação de Custos</a></li>
 <li><a href="#orgheadline6">6. <span class="todo TODO">TODO</span> Calendarização</a></li>
-<li><a href="#orgheadline40">7. <span class="todo TODO">TODO</span> Estudos de Viabilidade</a>
+<li><a href="#orgheadline41">7. <span class="todo TODO">TODO</span> Estudos de Viabilidade</a>
 <ul>
-<li><a href="#orgheadline36">7.1. Viabilidade Técnica</a></li>
-<li><a href="#orgheadline37">7.2. Viabilidade Ambiental</a></li>
-<li><a href="#orgheadline38">7.3. Viabilidade Politíca-Social</a></li>
-<li><a href="#orgheadline39">7.4. Viabilidade Económica e Financeira</a></li>
+<li><a href="#orgheadline37">7.1. Viabilidade Técnica</a></li>
+<li><a href="#orgheadline38">7.2. Viabilidade Ambiental</a></li>
+<li><a href="#orgheadline39">7.3. Viabilidade Politíca-Social</a></li>
+<li><a href="#orgheadline40">7.4. Viabilidade Económica e Financeira</a></li>
 </ul>
 </li>
 <li><a href="#orgheadline8">8. <span class="todo TODO">TODO</span> Avaliação Financeira</a></li>
-<li><a href="#orgheadline41">9. <span class="todo TODO">TODO</span> Organograma de Gestão do Empreendimento</a></li>
-<li><a href="#orgheadline42">10. <span class="todo TODO">TODO</span> Conclusão</a></li>
+<li><a href="#orgheadline42">9. <span class="todo TODO">TODO</span> Organograma de Gestão do Empreendimento</a></li>
+<li><a href="#orgheadline43">10. <span class="todo TODO">TODO</span> Conclusão</a></li>
 </ul>
 </div>
 </div>
@@ -834,8 +835,8 @@ serviços prestados.
 
 
 
-<div id="outline-container-orgheadline33" class="outline-2">
-<h2 id="orgheadline33"><span class="section-number-2">3</span> <span class="todo IN_PROGRESS">IN-PROGRESS</span> Definição do Ambito</h2>
+<div id="outline-container-orgheadline34" class="outline-2">
+<h2 id="orgheadline34"><span class="section-number-2">3</span> <span class="todo IN_PROGRESS">IN-PROGRESS</span> Definição do Ambito</h2>
 <div class="outline-text-2" id="text-3">
 
 <div id="orgparagraph3" class="figure">
@@ -1243,11 +1244,11 @@ nenhum problema se for utilizado uma carrinha.
 </div>
 
 
-<div id="outline-container-orgheadline31" class="outline-3">
-<h3 id="orgheadline31"><span class="section-number-3">3.4</span> Método de Construção</h3>
+<div id="outline-container-orgheadline32" class="outline-3">
+<h3 id="orgheadline32"><span class="section-number-3">3.4</span> Método de Construção</h3>
 <div class="outline-text-3" id="text-3-4">
-</div><div id="outline-container-orgheadline30" class="outline-4">
-<h4 id="orgheadline30"><span class="section-number-4">3.4.1</span> Soluções Técnicas</h4>
+</div><div id="outline-container-orgheadline31" class="outline-4">
+<h4 id="orgheadline31"><span class="section-number-4">3.4.1</span> Soluções Técnicas</h4>
 <div class="outline-text-4" id="text-3-4-1">
 </div><div id="outline-container-orgheadline29" class="outline-5">
 <h5 id="orgheadline29"><span class="section-number-5">3.4.1.1</span> Painéis Solares Fotovoltaicos</h5>
@@ -1270,44 +1271,58 @@ possível de extrair dos painéis.
 </p>
 </div>
 </div>
+
+
+<div id="outline-container-orgheadline30" class="outline-5">
+<h5 id="orgheadline30"><span class="section-number-5">3.4.1.2</span> Casa</h5>
+<div class="outline-text-5" id="text-3-4-1-2">
+
+<div id="orgparagraph7" class="figure">
+<p><img src="./images/detail.png" alt="casa" title="Contentor" align="center" width="600">
+</p>
+<p><span class="figure-number">Figure 7:</span> Corte tipíco de uma parede e chão das Casas</p>
+</div>
+</div>
+</div>
 </div>
 </div>
 
 
-<div id="outline-container-orgheadline32" class="outline-3">
-<h3 id="orgheadline32"><span class="section-number-3">3.5</span> Análise SWOT</h3>
-</div>
-</div>
 
-<div id="outline-container-orgheadline34" class="outline-2">
-<h2 id="orgheadline34"><span class="section-number-2">4</span> <span class="todo TODO">TODO</span> Enquadramento Legal</h2>
+<div id="outline-container-orgheadline33" class="outline-3">
+<h3 id="orgheadline33"><span class="section-number-3">3.5</span> Análise SWOT</h3>
+</div>
 </div>
 
 <div id="outline-container-orgheadline35" class="outline-2">
-<h2 id="orgheadline35"><span class="section-number-2">5</span> <span class="todo TODO">TODO</span> Quantificação de Custos</h2>
+<h2 id="orgheadline35"><span class="section-number-2">4</span> <span class="todo TODO">TODO</span> Enquadramento Legal</h2>
+</div>
+
+<div id="outline-container-orgheadline36" class="outline-2">
+<h2 id="orgheadline36"><span class="section-number-2">5</span> <span class="todo TODO">TODO</span> Quantificação de Custos</h2>
 </div>
 
 <div id="outline-container-orgheadline6" class="outline-2">
 <h2 id="orgheadline6"><span class="section-number-2">6</span> <span class="todo TODO">TODO</span> Calendarização</h2>
 </div>
 
-<div id="outline-container-orgheadline40" class="outline-2">
-<h2 id="orgheadline40"><span class="section-number-2">7</span> <span class="todo TODO">TODO</span> Estudos de Viabilidade</h2>
+<div id="outline-container-orgheadline41" class="outline-2">
+<h2 id="orgheadline41"><span class="section-number-2">7</span> <span class="todo TODO">TODO</span> Estudos de Viabilidade</h2>
 <div class="outline-text-2" id="text-7">
-</div><div id="outline-container-orgheadline36" class="outline-3">
-<h3 id="orgheadline36"><span class="section-number-3">7.1</span> Viabilidade Técnica</h3>
-</div>
-
-<div id="outline-container-orgheadline37" class="outline-3">
-<h3 id="orgheadline37"><span class="section-number-3">7.2</span> Viabilidade Ambiental</h3>
+</div><div id="outline-container-orgheadline37" class="outline-3">
+<h3 id="orgheadline37"><span class="section-number-3">7.1</span> Viabilidade Técnica</h3>
 </div>
 
 <div id="outline-container-orgheadline38" class="outline-3">
-<h3 id="orgheadline38"><span class="section-number-3">7.3</span> Viabilidade Politíca-Social</h3>
+<h3 id="orgheadline38"><span class="section-number-3">7.2</span> Viabilidade Ambiental</h3>
 </div>
 
 <div id="outline-container-orgheadline39" class="outline-3">
-<h3 id="orgheadline39"><span class="section-number-3">7.4</span> Viabilidade Económica e Financeira</h3>
+<h3 id="orgheadline39"><span class="section-number-3">7.3</span> Viabilidade Politíca-Social</h3>
+</div>
+
+<div id="outline-container-orgheadline40" class="outline-3">
+<h3 id="orgheadline40"><span class="section-number-3">7.4</span> Viabilidade Económica e Financeira</h3>
 </div>
 </div>
 
@@ -1315,12 +1330,12 @@ possível de extrair dos painéis.
 <h2 id="orgheadline8"><span class="section-number-2">8</span> <span class="todo TODO">TODO</span> Avaliação Financeira</h2>
 </div>
 
-<div id="outline-container-orgheadline41" class="outline-2">
-<h2 id="orgheadline41"><span class="section-number-2">9</span> <span class="todo TODO">TODO</span> Organograma de Gestão do Empreendimento</h2>
+<div id="outline-container-orgheadline42" class="outline-2">
+<h2 id="orgheadline42"><span class="section-number-2">9</span> <span class="todo TODO">TODO</span> Organograma de Gestão do Empreendimento</h2>
 </div>
 
-<div id="outline-container-orgheadline42" class="outline-2">
-<h2 id="orgheadline42"><span class="section-number-2">10</span> <span class="todo TODO">TODO</span> Conclusão</h2>
+<div id="outline-container-orgheadline43" class="outline-2">
+<h2 id="orgheadline43"><span class="section-number-2">10</span> <span class="todo TODO">TODO</span> Conclusão</h2>
 </div>
 <div id="footnotes">
 <h2 class="footnotes">Footnotes: </h2>
@@ -1353,7 +1368,7 @@ Administrador Geral para com o Empreendimento</div></div>
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: Luis Moura, Diana Rodrigues</p>
-<p class="date">Created: 2016-11-07 Mon 20:15</p>
+<p class="date">Created: 2016-11-07 Mon 21:07</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
